added new methods to course and student repositories, added new dashboard api endpoint with the required dto, controller and service, updated admin and student course controllers and services to now include filtering on both schoolId and departmentId, added preliminary service files for department, major, and school services